--- a/style.css
+++ b/style.css
@@ -1,78 +1,36 @@
 *{
     margin:0;
-    color:black;
 }
 .box{
-    height:auto;
-    width:auto;
-    display: flex;
-   
-
-}
-.middle_box{
-    height:auto;
-    width:50%;
-    margin: 1rem;
-    padding: 1rem;
-}
-
-.head{
-    height:4rem;
+    height: auto;
     width:100%;
-    font-size:20rem;
-    display:flex;
-    justify-content:space-between;
-    position: fixed;
-    background-color: #777F7F;
-    z-index: 3;  
-}
-
-.first-letter{
-    color:red;
-}
-.other-letter{
-    color:#c0d9c0;
-}
-.one{
-    height:4rem;
-    width:25%;
-    font-size: 2rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.two{
-    height:4rem;
-    width:75%;
-    font-size: 1rem;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding-right: 1rem;
-   
-
+    font-size: 10rem;
 }
 .full{
-    height:auto;
+    height: 50rem;
     width:100%;
-    padding-top: 50px;
-}
-.bar-space{
-    margin:0.01rem;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    background-color: #18453b ;
 }
 
-@media(max-width:1000px){
-    .head{
-        display:flex;
-        flex-direction: column ;
+.box {
+    opacity: 0;
+    animation: show-animation 3s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+}
+.box p:nth-child(1) {
+    animation-delay: 1.5s;
+}
+
+@keyframes show-animation {
+    0% {
+        opacity: 0;
+        transform: translateX(20px);
+        background-color: #00ab66;
     }
-    .one{
-        height: 50%;
-        width:100%;
-    }
-    .two{
-        height: 50%;
-        width:100%;
-        font-size: 0.9rem;
+    100% {
+        opacity: 1;
+        transform: translateY(0);
     }
 }
